update table importer header

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -22,6 +22,10 @@ caption:csv
 
 ```table
 ---
+# caption:
+# table-width:
+header: False
+# inline markdown
 Markdown: True
 include: data/asciitable.csv
 ---
@@ -88,6 +92,12 @@ include: data/asciitable.csv
 <!-- `Out/commandC.tmd`{.include} -->
 ```table
 ---
+# caption:
+alignment: C
+# table-width:
+# inline markdown
+markdown: True
+header: False
 caption: I2Cバス変更パケットの例
 include: data/commandC.csv
 ---
@@ -174,6 +184,9 @@ Table: 複数のレジスタから一度に読み出す例
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: multi registers write
 include: data/commandRandW_multi.csv
@@ -182,6 +195,9 @@ include: data/commandRandW_multi.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタのリスト
 include: data/register_list.csv
@@ -190,6 +206,9 @@ include: data/register_list.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ０(CHIP_ID)
 include: data/register0.csv
@@ -198,6 +217,9 @@ include: data/register0.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ１(GPIO0_STAT)
 include: data/register1.csv
@@ -206,6 +228,9 @@ include: data/register1.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ２(GPIO1_STAT)
 include: data/register2.csv
@@ -214,6 +239,9 @@ include: data/register2.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ３(GPIO0_CONF)
 include: data/register3.csv
@@ -222,6 +250,9 @@ include: data/register3.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ４(GPIO1_CONF)
 include: data/register4.csv
@@ -230,6 +261,9 @@ include: data/register4.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ５(I2C_CONF)
 include: data/register5.csv
@@ -238,6 +272,9 @@ include: data/register5.csv
 
 ```table
 ---
+# table-width:
+header: False
+# inline markdown
 markdown: True
 caption: レジスタ６(SPI_CONF)
 include: data/register6.csv
