apply gpp related rule

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -16,7 +16,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 +----------------------+------------------------------------------+
 | `|   '---data`       | （スクリーンショットなど）               |
 +----------------------+------------------------------------------+
-| `|---mbed`\          | （GUIビルド用pythonソースコードと\       |
+| `|---mbed`\\         | （GUIビルド用pythonソースコードと\\      |
 | `|`                  |   Qt4プロジェクトファイル）              |
 +----------------------+------------------------------------------+
 | `|---gui`            | （ファームウェアソースコード（mbed用）） |
@@ -88,15 +88,15 @@ GUIのソースコードは **`gui`** ディレクトリに用意されていま
 
 ### GUIのコンパイルと実行
 プロジェクトのルートディレクトリで
-```{.sh}
+```{.sh }
 $ make gui
 ```
 とすると`dist`と`build`ディレクトリが作られます。実行可能ファイルは`dist`に置かれます。
-```{.sh}
+```{.sh }
 $ dist/TinyI2C
 ```
 で実行できます。筆者の環境ではWindows/Linux/OSXとも動作確認できていますが、うまくいかないときは
-```{.sh}
+```{.sh }
 $ python gui/main.py
 ```
 と実行するとなにかヒントが出るかもしれません。
