comment out command table

--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -214,7 +214,7 @@ include: data/register_list.csv
 ---
 ```
 
-```table
+<!-- ```table
 ---
 # table-width:
 header: True
@@ -284,4 +284,4 @@ header: True
 markdown: True
 include: data/register6.csv
 ---
-```
+``` -->
