update sections 1 and 2
- directry tree just uses code block
- table-width is set

--- a/doc/1.0_tinyI2Cabstract.md
+++ b/doc/1.0_tinyI2Cabstract.md
@@ -7,26 +7,18 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 
 ## プロジェクトディレクトリツリー
 
-+----------------------+------------------------------------------+
-| (プロジェクトルート) |                                          |
-+----------------------+------------------------------------------+
-| `|`                  |                                          |
-+----------------------+------------------------------------------+
-| `|---doc`            | （ドキュメントフォルダ）                 |
-+----------------------+------------------------------------------+
-| `|   '---data`       | （スクリーンショットなど）               |
-+----------------------+------------------------------------------+
-| `|---mbed`\\         | （GUIビルド用pythonソースコードと\\      |
-| `|`                  |   Qt4プロジェクトファイル）              |
-+----------------------+------------------------------------------+
-| `|---gui`            | （ファームウェアソースコード（mbed用）） |
-+----------------------+------------------------------------------+
-| `|---pcb`            | （tinyI2Cハードウェアの設計ファイル）    |
-+----------------------+------------------------------------------+
-| `|   '---tinyI2C_P`  | （ガーバデータ）                         |
-+----------------------+------------------------------------------+
-| `'---python`         | （pythonライブラリ）                     |
-+----------------------+------------------------------------------+
+```
+(プロジェクトルート)
+|
+|---doc（ドキュメントフォルダ）
+|   '---data（スクリーンショットなど）
+|---mbed（ファームウェアソースコード（mbed用））
+|---gui（GUIビルド用pythonソースコードと
+|        Qt4プロジェクトファイル）
+|---pcb（tinyI2Cハードウェアの設計ファイル）
+|   '---tinyI2C_P（ガーバデータ）
+'---python（pythonライブラリ）
+```
 
 ## 特徴
 - FTDI^[<http://www.ftdichip.com/>] のUSBシリアル変換ケーブル^[TODO: TinyI2Cのみ]
