--- a/doc/2.0_Commands.md
+++ b/doc/2.0_Commands.md
@@ -166,7 +166,8 @@ O,'1',0x?A ?A,P
 ### `'R'` 0x52 read internal register
 ### `'W'` 0x57 write to internal register
 
-TinyI2Cモジュール内部の設定レジスタの操作をします
+TinyI2Cモジュール内部の設定レジスタの操作をします。
+返却パッケットのデータはコマンドパケットのレジスタ指定順で返却されます。
 
 Table: 単一レジスタから読出す例
 
@@ -174,14 +175,6 @@ Table: 単一レジスタから読出す例
 |:----:|:--------:|:----:|
 |  R   |   '0'    |  P   |
 |  R   |   '1'    |  P   |
-
-```table
----
-header: False
-alignment: C
----
-返却パッケットのデータはコマンドパケットのレジスタ指定順で返却されます
-```
 
 Table: 複数のレジスタから一度に読み出す例
 
@@ -214,9 +207,9 @@ include: data/register_list.csv
 ---
 ```
 
-<!-- ```table
+```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
@@ -227,7 +220,7 @@ include: data/register0.csv
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
@@ -238,50 +231,55 @@ include: data/register1.csv
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
 include: data/register2.csv
+caption: レジスタ２(GPIO1_STAT)
 ---
 ```
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
 include: data/register3.csv
+caption: レジスタ３(GPIO0_CONF)
 ---
 ```
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
 include: data/register4.csv
+caption: レジスタ４(GPIO1_CONF)
 ---
 ```
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
 include: data/register5.csv
+caption: レジスタ５(I2C_CONF)
 ---
 ```
 
 ```table
 ---
-# table-width:
+table-width: 1
 header: True
 # inline markdown
 markdown: True
 include: data/register6.csv
+caption: レジスタ６(SPI_CONF)
 ---
-``` -->
+```
