update tables, waveforms and section2

--- a/doc/markdown/2.0_Commands.md
+++ b/doc/markdown/2.0_Commands.md
@@ -195,6 +195,7 @@ include: data/commandRandW_multi.csv
 ---
 ```
 
+#### レジスタのリスト {-}
 ```table
 ---
 # table-width:
@@ -202,84 +203,118 @@ header: True
 # inline markdown
 markdown: True
 alignment: CCC
-caption: レジスタのリスト
 include: data/register_list.csv
 ---
 ```
 
+#### レジスタ０(CHIP_ID) {-}
+
+![](data/bitfields/register0.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
-caption: レジスタ０(CHIP_ID)
 include: data/register0.csv
 ---
 ```
 
+#### レジスタ１(GPIO0_STAT) {-}
+
+![](data/bitfields/register1.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
-caption: レジスタ１(GPIO0_STAT)
 include: data/register1.csv
 ---
 ```
 
+#### レジスタ２(GPIO1_STAT) {-}
+
+![](data/bitfields/register2.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
 include: data/register2.csv
-caption: レジスタ２(GPIO1_STAT)
 ---
 ```
 
+#### レジスタ３(GPIO0_CONF) {-}
+
+![](data/bitfields/register3.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
 include: data/register3.csv
-caption: レジスタ３(GPIO0_CONF)
 ---
 ```
 
+#### レジスタ４(GPIO1_CONF) {-}
+
+![](data/bitfields/register4.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
 include: data/register4.csv
-caption: レジスタ４(GPIO1_CONF)
 ---
 ```
 
+#### レジスタ５(I2C_CONF) {-}
+
+![](data/bitfields/register5.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
 include: data/register5.csv
-caption: レジスタ５(I2C_CONF)
 ---
 ```
 
+#### レジスタ６(SPI_CONF) {-}
+
+![](data/bitfields/register6.yaml){.bitfield}
+
 ```table
 ---
-table-width: 1
+width:
+  - 0.2
+  - 0.6
 header: True
 # inline markdown
 markdown: True
 include: data/register6.csv
-caption: レジスタ６(SPI_CONF)
 ---
 ```
