doc: apply class rename

--- a/doc/markdown/1.0_tinyI2Cabstract.md
+++ b/doc/markdown/1.0_tinyI2Cabstract.md
@@ -14,7 +14,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 |   '---data（スクリーンショットなど）
 |---mbed（ファームウェアソースコード（mbed用））
 |---gui（GUIビルド用pythonソースコードと
-|        Qt4プロジェクトファイル）
+|        Qt5プロジェクトファイル）
 |---pcb（tinyI2Cハードウェアの設計ファイル）
 |   '---tinyI2C_P（ガーバデータ）
 '---python（pythonライブラリ）
@@ -74,7 +74,7 @@ GUIのソースコードは **`gui`** ディレクトリに用意されていま
  いまのところ、_自力でコンパイル_ してもらう形になっています。
 
 ### GUIコンパイル要件
-- PyQt4
+- PyQt5
     - **_Windowsのみ_** OSに合わせてインストーラをダウンロードする形態のようです
 - pyinstaller
 
@@ -85,7 +85,7 @@ $ make gui
 ```
 とすると`dist`と`build`ディレクトリが作られます。実行可能ファイルは`dist`に置かれます。
 ```{.sh }
-$ dist/TinyI2C
+$ dist/TinyI2c
 ```
 で実行できます。筆者の環境ではWindows/Linux/OSXとも動作確認できていますが、うまくいかないときは
 ```{.sh }
