--- a/doc/markdown/3.0_PythonAPI.md
+++ b/doc/markdown/3.0_PythonAPI.md
@@ -7,7 +7,7 @@
 ## コンストラクタ
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c(  str port = 'com1', str baud = '115200' )`**                   |
+| **`TinyI2c(  str port = 'com1', str baud = '115200' )`**                      |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc.           |
@@ -18,24 +18,11 @@
 | ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
 +-------------------------------------------------------------------------------+
 
-<!--  -->
-
-+-------------------------------------------------------------------------------+
-| **`serial2i2c(  str port = 'com1', str baud = '115200' )`**                   |
-+===============================================================================+
-| - **argument**                                                                |
-|     - **`port`** Serial/UART port name; "COM1", "/dev/ttyUSB0" etc.           |
-|     - **`baud`** UART baudrate: 115200 or need to align with firmware         |
-|      setting for other rate                                                   |
-+-------------------------------------------------------------------------------+
-| `port`につながっている`TinyI2C`デバイスに接続する                             |
-| ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
-+-------------------------------------------------------------------------------+
 
 \\newpage
 ## UART操作API
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.raw_write( str data = "C4FEE0CA"  )`**                          |
+| **`TinyI2c.raw_write( str data = "C4FEE0CA"  )`**                             |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`data`** raw data to send, as text string                             |
@@ -48,7 +35,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.raw_read(  )`**                                                 |
+| **`TinyI2c.raw_read(  )`**                                                    |
 +===============================================================================+
 | - **return**                                                                  |
 |     - _ser.readline().strip()                                                 |
@@ -60,7 +47,7 @@
 ## I^2^Cバス操作API
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.start(   )`**                                                   |
+| **`TinyI2c.start(   )`**                                                      |
 +===============================================================================+
 | - **return**                                                                  |
 |     - None                                                                    |
@@ -71,7 +58,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.stop(   )`**                                                    |
+| **`TinyI2c.stop(   )`**                                                       |
 +===============================================================================+
 | - **return**                                                                  |
 |     - None                                                                    |
@@ -82,7 +69,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.read( int address, int length = 1 )`**                          |
+| **`TinyI2c.read( int address, int length = 1 )`**                             |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`address`** *8bit* I^2^C slave address                                |
@@ -96,7 +83,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.write( int address, int data = 0 )`**                           |
+| **`TinyI2c.write( int address, int data = 0 )`**                              |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`address`** *8bit* I^2^C slave address                                |
@@ -110,7 +97,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.write_and_read( int address, int wdata = 0, int rlength = 1 )`**|
+| **`TinyI2c.write_and_read( int address, int wdata = 0, int rlength = 1 )`**|
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`address`** *8bit* I^2^C slave address                                |
@@ -126,7 +113,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.setChannel( int channel = 0 )`**                                |
+| **`TinyI2c.setChannel( int channel = 0 )`**                                   |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`channel`** I^2^C bus channel 1~4                                     |
@@ -140,7 +127,7 @@
 ## SPIバス操作コマンドAPI
 
 +------------------------------------------------------------------------------------------------+
-| **`serial2i2c.write_and_read_SPI( int wlength = 1, int rlength = 0, int data = 0xC4FEE0CA )`** |
+| **`TinyI2c.write_and_read_SPI( int wlength = 1, int rlength = 0, int data = 0xC4FEE0CA )`**    |
 +================================================================================================+
 | - **argument**                                                                                 |
 |     - **`wlength`** _word length_ to write                                                     |
@@ -157,7 +144,7 @@
 ## 内部レジスタ操作コマンド
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.reg_read( str registers = "012" )`**                            |
+| **`TinyI2c.reg_read( str registers = "012" )`**                               |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`registers`**                                                         |
@@ -170,7 +157,7 @@
 <!--  -->
 
 +-------------------------------------------------------------------------------+
-| **`serial2i2c.reg_write( list pair = [ ('1', 0xFF),] )`**                     |
+| **`TinyI2c.reg_write( list pair = [ ('1', 0xFF),] )`**                        |
 +===============================================================================+
 | - **argument**                                                                |
 |     - **`pair`** list of touple                                               |
