--- a/doc/markdown/1.0_tinyI2Cabstract.md
+++ b/doc/markdown/1.0_tinyI2Cabstract.md
@@ -14,7 +14,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 |   '---data（スクリーンショットなど）
 |---mbed（ファームウェアソースコード（mbed用））
 |---gui（GUIビルド用pythonソースコードと
-|        Qt4プロジェクトファイル）
+|        Qtプロジェクトファイル）
 |---pcb（tinyI2Cハードウェアの設計ファイル）
 |   '---tinyI2C_P（ガーバデータ）
 '---python（pythonライブラリ）
@@ -34,7 +34,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 条件を満たせばラズパイでも動くと思います：
 
 - Python 2.7^[<https://www.python.org/>]
-    - Python3系でもおそらく動きますがライブラリ／GUIとも未テストです
+    - Python3系では動きませんが、ライブラリ・GUIとも現在移植中です。`porting-python3`ブランチを追いかけてください。
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
     - `$ pip install pyserial`{.sh}
@@ -53,6 +53,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 - LPC11U35
     - <https://developer.mbed.org/platforms/EA-LPC11U35/>
     - <https://developer.mbed.org/platforms/TG-LPC11U35-501/>
+        - **秋月的互換品が1/3程度の値段で売られてます**：<http://akizukidenshi.com/catalog/g/gK-12144/>
 - LPC1768
     - <https://developer.mbed.org/platforms/mbed-LPC1768/>
 
@@ -74,7 +75,7 @@ GUIのソースコードは **`gui`** ディレクトリに用意されていま
  いまのところ、_自力でコンパイル_ してもらう形になっています。
 
 ### GUIコンパイル要件
-- PyQt4
+- PyQt5
     - **_Windowsのみ_** OSに合わせてインストーラをダウンロードする形態のようです
 - pyinstaller
 
@@ -85,7 +86,7 @@ $ make gui
 ```
 とすると`dist`と`build`ディレクトリが作られます。実行可能ファイルは`dist`に置かれます。
 ```{.sh }
-$ dist/TinyI2C
+$ dist/TinyI2c
 ```
 で実行できます。筆者の環境ではWindows/Linux/OSXとも動作確認できていますが、うまくいかないときは
 ```{.sh }
