--- a/doc/markdown/1.0_tinyI2Cabstract.md
+++ b/doc/markdown/1.0_tinyI2Cabstract.md
@@ -13,8 +13,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 |---doc（ドキュメントフォルダ）
 |   '---data（スクリーンショットなど）
 |---mbed（ファームウェアソースコード（mbed用））
-|---gui（GUIビルド用pythonソースコードと
-|        Qt5プロジェクトファイル）
+|---gui（GUIビルド用pythonソースコードとQt5プロジェクトファイル）
 |---pcb（tinyI2Cハードウェアの設計ファイル）
 |   '---tinyI2C_P（ガーバデータ）
 '---python（pythonライブラリ）
@@ -33,11 +32,11 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 以下のソフトウェアをインストールしたコンピュータが必要です。
 条件を満たせばラズパイでも動くと思います：
 
-- Python 2.7^[<https://www.python.org/>]
-    - Python3系では動きませんが、ライブラリ・GUIとも現在移植中です。`porting-python3`ブランチを追いかけてください。
+- Python 3.5^[<https://www.python.org/>]
+    - Python3系で動くようにライブラリ・GUIとも移植しました。
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
-    - `$ pip install pyserial`{.sh}
+    - `$ pip3 install pyserial`{.sh}
 - **_Windowsのみ_** mbedインタフェース用のドライバ[^mbed_Serial_port_driver] を
   インストールする必要があります。
 
