--- a/doc/markdown/1.0_tinyI2Cabstract.md
+++ b/doc/markdown/1.0_tinyI2Cabstract.md
@@ -7,6 +7,24 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 
 ## プロジェクトディレクトリツリー
 
+<!-- ```{.plantuml im_out="img" caption="Directory Tree"}
+@startsalt
+{
+  {T
+  ""/"" (プロジェクトルート)
+  + ""doc/""（ドキュメントフォルダ）
+  ++ ""data/""（スクリーンショットなど）
+  + ""mbed/""（ファームウェアソースコード（mbed用））
+  + ""gui/""（GUIビルド用pythonソースコードとQt5プロジェクトファイル）
+  + ""pcb/""（tinyI2Cハードウェアの設計ファイル）
+  ++ ""tinyI2C_P/""（ガーバデータ）
+  + ""python/""（pythonライブラリ）
+  }
+}
+@endsalt
+```
+-->
+
 ```
 (プロジェクトルート)
 |
@@ -33,7 +51,8 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
 条件を満たせばラズパイでも動くと思います：
 
 - Python 3.5^[<https://www.python.org/>]
-    - Python3系で動くようにライブラリ・GUIとも移植しました。
+    - もともと2.7用に開発してましたが、Python3系で動くようにライブラリ・GUIとも移植しました。
+      移植後は3.5のみ動作確認してます。
 - PySerialライブラリ
     - PIP(Pythonのパッケージインストーラ)で入手できます
     - `$ pip3 install pyserial`{.sh}
@@ -51,8 +70,8 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
     - <https://developer.mbed.org/platforms/Switch-Science-mbed-LPC824/>
 - LPC11U35
     - <https://developer.mbed.org/platforms/EA-LPC11U35/>
+        - **秋月的互換品が1/3程度の値段で売られてます**：<http://akizukidenshi.com/catalog/g/gK-12144/>*：<http://akizukidenshi.com/catalog/g/gK-12144/>
     - <https://developer.mbed.org/platforms/TG-LPC11U35-501/>
-        - **秋月的互換品が1/3程度の値段で売られてます**：<http://akizukidenshi.com/catalog/g/gK-12144/>
 - LPC1768
     - <https://developer.mbed.org/platforms/mbed-LPC1768/>
 
@@ -85,7 +104,7 @@ $ make gui
 ```
 とすると`dist`と`build`ディレクトリが作られます。実行可能ファイルは`dist`に置かれます。
 ```{.sh }
-$ dist/TinyI2c
+$ dist/TinyI2C
 ```
 で実行できます。筆者の環境ではWindows/Linux/OSXとも動作確認できていますが、うまくいかないときは
 ```{.sh }
