fix sections 1 and 9

--- a/doc/markdown/1.0_tinyI2Cabstract.md
+++ b/doc/markdown/1.0_tinyI2Cabstract.md
@@ -70,7 +70,7 @@ I^2^CやSPI通信したり、個別にプルアップ／プルダウンを指定
     - <https://developer.mbed.org/platforms/Switch-Science-mbed-LPC824/>
 - LPC11U35
     - <https://developer.mbed.org/platforms/EA-LPC11U35/>
-        - **秋月的互換品が1/3程度の値段で売られてます**：<http://akizukidenshi.com/catalog/g/gK-12144/>*：<http://akizukidenshi.com/catalog/g/gK-12144/>
+        - **秋月的互換品が1/3程度の値段で売られてます** ：<http://akizukidenshi.com/catalog/g/gK-12144/>
     - <https://developer.mbed.org/platforms/TG-LPC11U35-501/>
 - LPC1768
     - <https://developer.mbed.org/platforms/mbed-LPC1768/>
