--- a/doc/markdown/2.0_Commands.md
+++ b/doc/markdown/2.0_Commands.md
@@ -20,7 +20,7 @@
     - _0x30をマスクにするとアスキー文字列として送ることができます。_
 ```table
 ---
-# caption:
+caption: アスキー文字一覧（抜粋）
 table-width: 0.6
 alignment: CCCDCCC
 header: True
@@ -208,6 +208,7 @@ include: data/register_list.csv
 ---
 ```
 
+\\newpage
 #### レジスタ０(CHIP_ID) {-}
 
 ![](data/bitfields/register0.yaml){.bitfield}
@@ -242,23 +243,6 @@ include: data/register1.csv
 ```
 
 \\newpage
-#### レジスタ２(GPIO1_STAT) {-}
-
-![](data/bitfields/register2.yaml){.bitfield}
-
-```table
----
-width:
-  - 0.2
-  - 0.5
-header: True
-# inline markdown
-markdown: True
-include: data/register2.csv
----
-```
-
-\\newpage
 #### レジスタ３(GPIO0_CONF) {-}
 
 ![](data/bitfields/register3.yaml){.bitfield}
@@ -272,6 +256,23 @@ header: True
 # inline markdown
 markdown: True
 include: data/register3.csv
+---
+```
+
+\\newpage
+#### レジスタ２(GPIO1_STAT) {-}
+
+![](data/bitfields/register2.yaml){.bitfield}
+
+```table
+---
+width:
+  - 0.2
+  - 0.5
+header: True
+# inline markdown
+markdown: True
+include: data/register2.csv
 ---
 ```
 
