--- a/doc/markdown/3.0_PythonAPI.md
+++ b/doc/markdown/3.0_PythonAPI.md
@@ -14,7 +14,7 @@
 |     - **`baud`** UART baudrate: 115200 or need to align with firmware         |
 |      setting for other rate                                                   |
 +-------------------------------------------------------------------------------+
-| `port`につながっている`TinyI2C`デバイスに接続する                             |
+| `port`につながっている`TinyI2C`デバイスに接続する\                            |
 | ＊ボーレートを変更する場合はファームウェアにも変更が必要                      |
 +-------------------------------------------------------------------------------+
 
@@ -166,14 +166,14 @@
 | - **return**                                                                  |
 |     - str raw_read()                                                          |
 +-------------------------------------------------------------------------------+
-| それぞれの`register`に、対応する`data`を書き込む                              |
+| それぞれの`register`に、対応する`data`を書き込む\                             |
 | `register`は'0'~'6'もしくは以下の定義済み変数が使える：                       |
 |                                                                               |
-| - '0'     =>   CHIP_ID                                                        |
-| - '1'     =>   GPIO0_STAT                                                     |
-| - '2'     =>   GPIO1_STAT                                                     |
-| - '4'     =>   GPIO1_CONF                                                     |
-| - '3'     =>   GPIO0_CONF                                                     |
-| - '5'     =>   I2C_CONF                                                       |
-| - '6'     =>   SPI_CONF                                                       |
+| - '0'     =>   `CHIP_ID`                                                      |
+| - '1'     =>   `GPIO0_STAT`                                                   |
+| - '2'     =>   `GPIO1_STAT`                                                   |
+| - '4'     =>   `GPIO1_CONF`                                                   |
+| - '3'     =>   `GPIO0_CONF`                                                   |
+| - '5'     =>   `I2C_CONF`                                                     |
+| - '6'     =>   `SPI_CONF`                                                     |
 +-------------------------------------------------------------------------------+
